# cliped-crossplatform

./: .gitignore  NAMING_UPDATE.md  README.md  build-linux.sh  build-macos.sh  build-windows.bat  index.html  package-lock 2.json  package-lock.json  package.json  test-homebrew.sh  test.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
Casks/: cliped-crossplatform.rb
src/: App.tsx  main.tsx  types.d.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.conf.json.backup
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/Components/: ClipboardItem.tsx  ClipboardList.tsx  ConfirmDialog.tsx  FileTransfer.tsx  Notification.tsx  SettingsPage.tsx
src/Hooks/: useClipboard.ts  useGlobalShortcut.ts  useHotKey.ts
src/Styles/: styles.css
