[package]
name = "cliped"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.5"
uuid = { version = "1.0", features = ["v4"] }
local-ip-address = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"
rand = "0.8"

